--- a/web/cobrands/oxfordshire/base.scss
+++ b/web/cobrands/oxfordshire/base.scss
@@ -87,3 +87,10 @@ dd, p {
         #fff
     );
 }
+
+@media print {
+    .mappage #oxford-header,
+    .mappage #side > .extra-text {
+        display: none !important;
+    }
+}
