--- a/templates/web/base/report/_item.html
+++ b/templates/web/base/report/_item.html
@@ -4,6 +4,7 @@
         <img class="img" height="60" width="90" src="[% problem.photos.first.url_fp %]" alt="">
     [% END %]
         <h3 class="item-list__heading">[% problem.title | html %]</h3>
+        <div class="item-list__description">[% problem.detail | html %]</div>
         <small>
             [%- IF c.cobrand.moniker != 'fixamingata' %] [%# Default: %]
                 [%- prettify_dt( problem.confirmed, 1 ) %]
@@ -27,5 +28,69 @@
                 [% loc('(closed)') %]
             [% END %]
         </small>
+
+[%# TODO: This is directly copied from report_blocks.html %]
+[%
+SET state_pretty = {
+    'confirmed' = loc('Open')
+    'investigating' = loc('Investigating')
+    'planned' = loc('Planned')
+    'in progress' = loc('In progress')
+    'action scheduled' = loc('Action Scheduled')
+    'fixed' = loc('Fixed')
+    'fixed - user' = loc('Fixed - User')
+    'fixed - council' = loc('Fixed - Council')
+    'unable to fix' = loc('Unable to fix')
+    'not responsible' = loc('Not Responsible')
+    'duplicate' = loc('Duplicate')
+    'closed' = loc('Closed')
+    'internal referral' = loc('Internal referral')
+    'hidden' = loc('Hidden')
+    'partial' = loc('Partial')
+    'unconfirmed' = loc('Unconfirmed')
+};
+%]
+
+
+    [%# TODO: Only show this if user has inspect permission for this problem %]
+        <div class="item-list__item__metadata">
+            <div>
+                <h4>[% loc('Report ID:') %]</h4>
+                <p>[% problem.id %]</p>
+            </div>
+          [% IF problem.local_coords %]
+            <div>
+                <h4>[% loc('Easting/Northing:') %]</h4>
+                <p>[% problem.local_coords.0 %], [% problem.local_coords.1 %]</p>
+            </div>
+          [% END %]
+            <div>
+                <h4>[% loc('Latitude/Longitude:') %]</h4>
+                <p>[% problem.latitude %], [% problem.longitude %]</p>
+            </div>
+            <div>
+                <h4>[% loc('Category') %]</h4>
+                <p>[% (problem.category OR '-') | html %]</p>
+            </div>
+            <div>
+                <h4>[% loc('State') %]</h4>
+                <p>[% state_pretty.${problem.state} %]</p>
+            </div>
+            <div>
+                <h4>[% loc('Priority') %]</h4>
+                <p>[%# TODO: How to get priority?? %]</p>
+            </div>
+            <div>
+                <h4>[% loc('Traffic management required?') %]</h4>
+                <p>[% problem.get_extra_metadata('traffic_information') %]</p>
+            </div>
+            <div>
+                <h4>[% loc('Extra details') %]</h4>
+                <p>[% problem.get_extra_metadata('detailed_information') | html %]</p>
+            </div>
+        </div>
+    [%# END TODO %]
+
+
 </a>
 </li>
