--- a/templates/web/fixmystreet.com/report/_report_meta_info.html
+++ b/templates/web/fixmystreet.com/report/_report_meta_info.html
@@ -2,4 +2,8 @@
 [% IF c.cobrand.moniker != problem.get_cobrand_logged.moniker AND problem.get_cobrand_logged.is_council %]
     using <a href="https://www.fixmystreet.com/about/council">FixMyStreet for Councils</a>
 [% END %]
+[% IF c.user_exists AND c.user.id == problem.user_id AND !problem.anonymous %]
+  <!-- TODO: Should this link to a page with server-side form, for users without JavaScript? -->
+  <a href="#" class="js-hide-name">([% loc('Hide your name?') %])</a>
+[% END %]
 [%- IF !problem.used_map %]; <strong>([% loc('there is no pin shown as the user did not use the map') %])</strong>[% END %]
