Wording improvements for hiding actions

--- a/templates/web/base/report/update.html
+++ b/templates/web/base/report/update.html
@@ -37,9 +37,9 @@
                     <div class="box-warning hide-name-form">
                         <!-- TODO: URL or form with button? -->
                         <a href="#">[% loc('Hide my name in this update') %]</a>
-                        <p>[% loc('Alternatively, we can hide your name on <strong>all of your updates</strong>:') %]</p>
+                        <p>[% loc('Alternatively, we can hide your name on <strong>all of your reports and updates</strong> across the site:') %]</p>
                         <!-- TODO: URL or form with button? -->
-                        <a href="#">[% loc('Hide my name on all my updates') %]</a>
+                        <a href="#">[% loc('Hide my name everywhere') %]</a>
                     </div>
                   [%- END %]
                 </div>
