--- a/templates/web/base/report/_main.html
+++ b/templates/web/base/report/_main.html
@@ -69,9 +69,9 @@
       [% END %]
         <!-- TODO: URL or form with button? -->
         <a href="#">[% loc('Hide my name on this report') %]</a>
-        <p>[% loc('Alternatively, we can hide your name on <strong>all of your reports</strong>:') %]</p>
+        <p>[% loc('Alternatively, we can hide your name on <strong>all of your reports and updates</strong> across the site:') %]</p>
         <!-- TODO: URL or form with button? -->
-        <a href="#">[% loc('Hide my name on all my reports') %]</a>
+        <a href="#">[% loc('Hide my name everywhere') %]</a>
     </div>
   [%- END %]
 
