--- a/templates/web/base/report/_main.html
+++ b/templates/web/base/report/_main.html
@@ -65,7 +65,7 @@
     <!-- TODO: Should this work without javascript too? -->
     <div class="box-warning hide-name-form">
       [% IF problem.bodies_str %]
-        <p>tprintf(loc('Your name has already been sent to %s, but we can hide it on this page:'), problem.bodies_str)</p>
+        <p>[% tprintf(loc('Your name has already been sent to %s, but we can hide it on this page:'), problem.bodies_str) %]</p>
       [% END %]
         <!-- TODO: URL or form with button? -->
         <a href="#">[% loc('Hide my name on this report') %]</a>
