Consistent styling for buttons in .box-warning

--- a/templates/web/base/report/_main.html
+++ b/templates/web/base/report/_main.html
@@ -68,10 +68,10 @@
         <p>[% tprintf(loc('Your name has already been sent to %s, but we can hide it on this page:'), problem.bodies_str) %]</p>
       [% END %]
         <!-- TODO: URL or form with button? -->
-        <a href="#">[% loc('Hide my name on this report') %]</a>
+        <a href="#" class="btn-primary">[% loc('Hide my name on this report') %]</a>
         <p>[% loc('Alternatively, we can hide your name on <strong>all of your reports and updates</strong> across the site:') %]</p>
         <!-- TODO: URL or form with button? -->
-        <a href="#">[% loc('Hide my name everywhere') %]</a>
+        <a href="#" class="btn">[% loc('Hide my name everywhere') %]</a>
     </div>
   [%- END %]
 
