--- a/templates/web/base/report/update.html
+++ b/templates/web/base/report/update.html
@@ -36,10 +36,10 @@
                     <!-- TODO: Should this work without javascript too? -->
                     <div class="box-warning hide-name-form">
                         <!-- TODO: URL or form with button? -->
-                        <a href="#">[% loc('Hide my name in this update') %]</a>
+                        <a href="#" class="btn-primary">[% loc('Hide my name in this update') %]</a>
                         <p>[% loc('Alternatively, we can hide your name on <strong>all of your reports and updates</strong> across the site:') %]</p>
                         <!-- TODO: URL or form with button? -->
-                        <a href="#">[% loc('Hide my name everywhere') %]</a>
+                        <a href="#" class="btn">[% loc('Hide my name everywhere') %]</a>
                     </div>
                   [%- END %]
                 </div>
