--- a/templates/web/base/admin/user-form.html
+++ b/templates/web/base/admin/user-form.html
@@ -144,6 +144,10 @@
             <li>
               [% group.key %]
               <ul class="no-bullets">
+                <li>
+                  (<a href="#" data-select-all>[% loc('all') %]</a> /
+                  <a href="#" data-select-none>[% loc('none') %]</a>)
+                </li>
                 [% FOREACH permission IN group.value %]
                   <li>
                     <label class="inline">
